# Anamnesis

./: .gitignore  CMakeLists.txt  LICENSE.txt  PR_SUMMARY.md  README.md  anamnesis.c  anamnesis_queue.c  bench.cpp  entropy_data.txt  extract_entropy.sh  test_queue.c
.github/workflows/: ci.yml
bench/: bench.cpp
docs/: TRACING.md
include/: anamnesis.h  anamnesis_queue.h  anamnesis_trace.h
src/: anamnesis.c  anamnesis_trace.c
tests/: stress_test.c  test_anamnesis.c  test_queue.c  trace_test.c
tools/: analyze_traces.py
